style(app): fix the issue with overflow in the vertical

--- a/praxis-notes-app/app/css/styles.css
+++ b/praxis-notes-app/app/css/styles.css
@@ -146,3 +146,9 @@
         }
     }
 }
+
+#app {
+    height: 100dvh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
